Fix News page formatting on mobile, make it consistent with original design

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -189,9 +189,6 @@ ol {
 .solid_top_border {
   border-top: 1px solid $grey-color-light;
 }
-.solid_right_border {
-  border-right: 1px solid $grey-color-light;
-}
 hr.border-center-shadow {
   background: url("../assets/images/line.png") no-repeat center bottom;
   border-width: 1px 0 0;
