--- a/_sass/_news-page.scss
+++ b/_sass/_news-page.scss
@@ -1,10 +1,18 @@
-.template-blog {
-  padding-right: $spacing-unit * 2.5;
+@include media-query-min($on-mobile) {
+  .template-blog {
+    padding-right: $spacing-unit * 2.5;
+    border-right: 1px solid $grey-color-light;
+  }
 }
 
 .post-content {
   padding-bottom: $spacing-unit * 2.5;
   margin-bottom: $spacing-unit * 2.5;
+
+  @include media-query-max($on-mobile) {
+    padding-bottom: $spacing-unit * 1.5;
+    margin-bottom: $spacing-unit * 1.5;
+  }
 
   h2 {
   	font-size: 21px;
@@ -15,6 +23,9 @@
       text-decoration: none;
       color: $header-color;
     }
+  }
+  img {
+    height: auto;
   }
 }
 
@@ -66,6 +77,11 @@
 
 .archives-sidebar {
   margin-left: $spacing-unit * 2.5;
+
+  @include media-query-max($on-mobile) {
+    display: none;
+  }
+
   h3 {
     margin-bottom: $spacing-unit * 0.5;
   }
