--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,7 +22,5 @@ $grey-color-dark:  #585858;
 $content-width:    800px;
 
 $on-mobile:        767px;
-$on-laptop:        800px;
-
 $desktop-large:    1140px;
 $desktop-ex-large: 1340px;
